# influx-bridge-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package.xml  upload.sh
include/influxdb_bridge_cpp/: defines.hpp  defines.hpp.in  influx_bridge_node.hpp  library_importer.hpp  point.hpp  point.hxx
include/influxdb_bridge_cpp/msgs/: base.hpp  sensor_msgs.hpp  std_msgs.hpp  turtlesim.hpp
launch/: test.launch.py
src/: base.cpp  influx_bridge_node.cpp  main.cpp  point.cpp  test_v2.cpp
src/measurements_implementation/: sensor_msgs.cpp  std_msgs.cpp  turtlesim.cpp
